[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/fonts/Azonix.otf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/start/game_over.gd" type="Script" id=2]
[ext_resource path="res://assets/audio/game_over_sound.wav" type="AudioStream" id=3]

[sub_resource type="DynamicFont" id=1]
size = 45
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_char = 4
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 42
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_char = 2
font_data = ExtResource( 1 )

[node name="game_over" type="Node2D"]
script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 352.01
margin_top = 280.291
margin_right = 683.01
margin_bottom = 326.291
custom_fonts/font = SubResource( 1 )
text = "game over"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="Voltar" type="Button" parent="."]
margin_left = 191.842
margin_top = 372.55
margin_right = 345.842
margin_bottom = 431.55
focus_mode = 0
custom_fonts/font = SubResource( 2 )
enabled_focus_mode = 0
text = "Menu"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Replay" type="Button" parent="."]
margin_left = 683.01
margin_top = 372.55
margin_right = 894.01
margin_bottom = 431.55
focus_mode = 0
custom_fonts/font = SubResource( 2 )
enabled_focus_mode = 0
text = "Replay"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="pressed" from="Voltar" to="." method="_on_Voltar_pressed"]
[connection signal="pressed" from="Replay" to="." method="_on_Replay_pressed"]
